--- a/index_1.html
+++ b/index_1.html
@@ -3,19 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pokerball</title>
-    <style>
-        .container {
-            margin-top: 60px;
-        }
-
-        .pokerball {
-            box-sizing: border-box;
-            --pokerball-size: 250px;<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edges">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles_v4.css">
     <title>Pokerball</title>
     <style>
         * {
