--- a/index_2.html
+++ b/index_2.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
 
+    <head>
+        <meta charset="UTF-8">
+        <title>Pokerball</title>
+        <style>
+            .container {
+                margin-top: 60px;
+            }
+
+            .pokerball {
+                box-sizing: border-box;
+                --pokerball-size: 250px;
+                --pokerball-inner-size: 80px;
+                --pokerball-border-size: 20px;
+
+                --before-diameter: var(--pokerball-inner-size);
+                --after-diameter: calc();
+
+                border: var(--pokerball-border-size) solid;
+                width: var(--pokerball-size);
+                height: var(--pokerball-size);
+                border-radius: 100%;
+                margin: 0 auto;
+
+                background: linear-gradient(
+                    150deg,
+                    #BA0C2F 0%,
+                    #BA0C2F 44%,
+                    #262122 44%,
+                    #262122 56%,
+                    #fff 56%,
+                    #fff 100%
+                );
+            }
+
+            .pokerball:before,
+            .pokerball:after {
+                content: " ";
+                border-radius: 100%;
+                display: block;
+                position: absolute;
+            }
+
+            .pokerball:before {
+                background: green;
+                width: var(--before-diameter);
+                height: var(--before-diameter);
+                top: calc(50% - var(--before-diameter) / 2);
+                left: calc(50% - var(--before-diameter) / 2);
+            }
+
+            .pokerball:after {
+                width: var(--after-diameter);
+                height: var(--after-diameter);
+
+                top: calc(50% - ((var(--after-diameter) / 2) + var(--pokerball--border-size)));
+                left: calc(50% - ((var(--after-diameter) / 2) + var(--pokerball--border-size)));
+
+                background: yellow;
+                border: double var(--pokerball-border-size) blue;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="pokerball"></div>
+        </div>
+    </body>
+
+</html>
