--- a/index_2.html
+++ b/index_2.html
@@ -59,6 +59,7 @@
 
 
                 background: #fff;
+                border: double var(--pokerball-border-size) #262122;
             }
         </style>
     </head>
