--- a/index_2.html
+++ b/index_2.html
@@ -56,7 +56,8 @@
                 width: var(--after-diameter);
                 height: var(--after-diameter);
 
-
+                top: calc(50% - ((var(--after-diameter) / 2) + var(--pokerball--border-size)));
+                left: calc(50% - ((var(--after-diameter) / 2) + var(--pokerball--border-size)));
 
                 background: #fff;
                 border: double var(--pokerball-border-size) #262122;
