--- a/index_2.html
+++ b/index_2.html
@@ -16,7 +16,7 @@
                 --pokerball-border-size: 10px;
 
                 --before-diameter: var(--pokerball-inner-size);
-                --after-diameter: calc(var(--before-diameter) - var(--pokerball-border-size) * 3);
+                --after-diameter: calc(var(--before-diameter) - (var(--pokerball-border-size) * 3));
 
                 border: var(--pokerball-border-size) solid #262122;
                 width: var(--pokerball-size);
