--- a/index_2.html
+++ b/index_2.html
@@ -62,6 +62,39 @@
             background: #fff;
             border: double var(--pokerball-border-size) #262122;
         }
+        
+        .pokerball-animated {
+            animation-duration: 1s;
+            animation-fill-mode: both;
+            animation-iteration-count: infinite;
+            animation-name: shake;
+        }
+
+        @keyframes shake {
+                from {
+                    transform: none;
+                }
+
+                20% {
+                    transform: translate3d(-20%, 0, 0) rotate3d(0, 0, 1, -10deg);
+                }
+
+                40% {
+                    transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 5deg);
+                }
+
+                50% {
+                    transform: translate3d(-10%, 0, 0) rotate3d(0, 0, 1, -10deg);
+                }
+
+                60% {
+                    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
+                }
+
+                to {
+                    transform: none;
+                }
+        }
     </style>
 </head>
 
