--- a/task_v1.html
+++ b/task_v1.html
@@ -121,7 +121,7 @@
       height: 100%;
     }
     
-    /* Simplified checkbox styling */
+    /* Adjusted checkbox styling for a larger size */
     .checkbox-container {
       display: flex;
       align-items: center;
@@ -129,7 +129,9 @@
     }
 
     .checkbox {
-      margin-right: 5px;
+      width: 25px;
+      height: 25px;
+      margin-right: 10px;
     }
 
   </style>
@@ -173,7 +175,6 @@
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
-            <!-- Repeat for additional lines -->
           </section>
           <section>
             <h2 class="section-title">Next Week</h2>
