--- a/task_v1.html
+++ b/task_v1.html
@@ -158,6 +158,9 @@
         <article class="weekly-plan">
           <section>
             <h2 class="section-title">Top 3 Goals</h2>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
