--- a/task_v1.html
+++ b/task_v1.html
@@ -120,27 +120,17 @@
       grid-gap: 3px;
       height: 100%;
     }
-    
+
     .checkbox-container {
       display: flex;
       align-items: center;
-      margin-top: 2px;
+      margin-top: 22px; /* Increased margin to move the checkbox down by 20 pixels */
     }
 
     .checkbox {
       width: 25px;
       height: 25px;
       margin-right: 10px;
-    }
-
-    /* Added button styling */
-    .button {
-      padding: 5px 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
     }
 
   </style>
@@ -152,13 +142,11 @@
       <h2>Week Of</h2>
       <div class="checkbox-container">
         <input type="checkbox" class="checkbox">
-        <button class="button">Click Me</button>
       </div>
       <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Healthy Habit</h2>
       <div class="checkbox-container">
         <input type="checkbox" class="checkbox">
-        <button class="button">Click Me</button>
       </div>
       <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Room for Improvement</h2>
@@ -171,7 +159,6 @@
             <h2 class="section-title">Top 3 Goals</h2>
             <div class="checkbox-container">
               <input type="checkbox" class="checkbox">
-              <button class="button">Click Me</button>
             </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
