--- a/task_v1.html
+++ b/task_v1.html
@@ -161,7 +161,13 @@
               <input type="checkbox" class="checkbox">
             </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
           <section>
