--- a/task_v1.html
+++ b/task_v1.html
@@ -172,22 +172,64 @@
           </section>
           <section>
             <h2 class="section-title">Everything Else</h2>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
           <section>
             <h2 class="section-title">Next Week</h2>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
+            <div class="checkbox-container">
+              <input type="checkbox" class="checkbox">
+            </div>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
         </article>
