--- a/task_v1.html
+++ b/task_v1.html
@@ -70,11 +70,6 @@
       margin-bottom: 5px;
     }
 
-    .small-text-input-container {
-      display: flex;
-      align-items: center;
-    }
-
     .small-text-input {
       width: 400px;
       min-width: 100px;
@@ -89,10 +84,14 @@
       resize: none;
     }
 
-    .checkbox {
-      width: 25px;
-      height: 25px;
-      margin-right: 10px;
+    .text-input {
+      width: calc(100% - 10px);
+      margin: 0;
+      padding: 5px;
+      box-sizing: border-box;
+      border: none;
+      border-bottom: 1px solid #000;
+      font-size: 1em;
     }
 
     .days-of-week {
@@ -122,6 +121,18 @@
       height: 100%;
     }
 
+    .checkbox-container {
+      display: flex;
+      align-items: center;
+      margin-top: 22px; /* Increased margin to move the checkbox down by 20 pixels */
+    }
+
+    .checkbox {
+      width: 25px;
+      height: 25px;
+      margin-right: 10px;
+    }
+
   </style>
 </head>
 <body>
@@ -129,19 +140,15 @@
     <div class="header">
       <h1>PLAN WEEKLY</h1>
       <h2>Week Of</h2>
-      <div class="small-text-input-container">
-        <div class="checkbox-container">
-          <input type="checkbox" class="checkbox">
-        </div>
-        <textarea class="small-text-input" rows="1" type="text"></textarea>
+      <div class="checkbox-container">
+        <input type="checkbox" class="checkbox">
       </div>
+      <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Healthy Habit</h2>
-      <div class="small-text-input-container">
-        <div class="checkbox-container">
-          <input type="checkbox" class="checkbox">
-        </div>
-        <textarea class="small-text-input" rows="1" type="text"></textarea>
+      <div class="checkbox-container">
+        <input type="checkbox" class="checkbox">
       </div>
+      <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Room for Improvement</h2>
       <h2>Rocked It</h2>
     </div>
