--- a/task_v1.html
+++ b/task_v1.html
@@ -70,12 +70,16 @@
       margin-bottom: 5px;
     }
 
+    .small-text-input-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
     .small-text-input {
       width: 400px;
       min-width: 100px;
       max-width: 400px;
-      margin-top: 10px;
-      margin-bottom: 10px;
       padding: 5px;
       box-sizing: border-box;
       border: none;
@@ -124,7 +128,7 @@
     .checkbox-container {
       display: flex;
       align-items: center;
-      margin-top: 22px; /* Increased margin to move the checkbox down by 20 pixels */
+      margin-top: 22px;
     }
 
     .checkbox {
@@ -140,15 +144,19 @@
     <div class="header">
       <h1>PLAN WEEKLY</h1>
       <h2>Week Of</h2>
-      <div class="checkbox-container">
-        <input type="checkbox" class="checkbox">
+      <div class="small-text-input-container">
+        <textarea class="small-text-input" rows="1" type="text"></textarea>
+        <div class="checkbox-container">
+          <input type="checkbox" class="checkbox">
+        </div>
       </div>
-      <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Healthy Habit</h2>
-      <div class="checkbox-container">
-        <input type="checkbox" class="checkbox">
+      <div class="small-text-input-container">
+        <textarea class="small-text-input" rows="1" type="text"></textarea>
+        <div class="checkbox-container">
+          <input type="checkbox" class="checkbox">
+        </div>
       </div>
-      <textarea class="small-text-input" rows="1" type="text"></textarea>
       <h2>Room for Improvement</h2>
       <h2>Rocked It</h2>
     </div>
@@ -164,26 +172,7 @@
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
-          <section>
-            <h2 class="section-title">Everything Else</h2>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-          </section>
-          <section>
-            <h2 class="section-title">Next Week</h2>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-          </section>
+          <!-- Repeat for additional sections -->
         </article>
       </div>
     </div>
