--- a/task_v1.html
+++ b/task_v1.html
@@ -168,10 +168,11 @@
             <div class="checkbox-container">
               <input type="checkbox" class="checkbox">
             </div>
-            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="small-text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
             <textarea class="text-input" rows="1" type="text"></textarea>
           </section>
+
           <!-- Repeat for additional sections -->
         </article>
       </div>
