--- a/task_v1.html
+++ b/task_v1.html
@@ -77,9 +77,11 @@
     }
 
     .small-text-input {
-      width: 400px;
+      width: calc(100% - 30px); /* Adjusted width */
       min-width: 100px;
       max-width: 400px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       padding: 5px;
       box-sizing: border-box;
       border: none;
