--- a/task1.html
+++ b/task1.html
@@ -10,6 +10,23 @@
   <link rel="stylesheet" href="styles_v1.css" />
   <title>Youtube Clone with HTML & CSS</title>
 </head>
+<style>
+        /* Add this CSS to make videos display horizontally */
+        .video-section {
+            display: flex;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+        }
+
+        .video-container {
+            margin-right: 20px;
+        }
+
+        .video-container:last-child {
+            margin-right: 0;
+        }
+        /* End of added CSS */
+</style>
 <body>
   <header class="header">
     <div class="logo left">
