--- a/task1.html
+++ b/task1.html
@@ -25,12 +25,6 @@
         width: 70%; /* Adjust the width of the videos section */
     }
 
-    .side-bar {
-        width: 25%; /* Adjust the width of the sidebar */
-        box-sizing: border-box;
-        padding: 20px;
-        background-color: #f9f9f9; /* Set a background color for the sidebar */
-    }
     .video-section {
         display: flex;
         flex-wrap: wrap; /* Wrap to the next line */
@@ -38,8 +32,22 @@
     }
     
     .video-container {
-        flex: 0 0 calc(16.666% - 20px); /* 6 videos per row, adjust as needed */
+        flex: 0 0 calc(33.33% - 20px); /* 3 videos per row, adjust as needed */
         margin-bottom: 20px; /* Adjust the bottom margin */
+    }
+
+    /* Ensure proper spacing for the sidebar */
+    .side-bar {
+        box-sizing: border-box;
+        padding: 20px;
+        background-color: #f9f9f9; /* Set a background color for the sidebar */
+    }
+
+    /* Clearfix to fix overflow issues */
+    .video-section::after {
+        content: "";
+        display: table;
+        clear: both;
     }
     
     .video-container:last-child {
