--- a/task1.html
+++ b/task1.html
@@ -22,6 +22,8 @@ User
         .video-container {
             flex: 0 0 calc(16.666% - 20px); /* 6 videos per row, adjust as needed */
             margin-bottom: 20px; /* Adjust the bottom margin */
+            box-sizing: border-box; /* Include padding and border in the element's total width and height */
+            width: 100%; /* Make sure each video takes the full width */
         }
         
         .video-container:last-child {
