--- a/task1.html
+++ b/task1.html
@@ -40,6 +40,7 @@
       .video-section {
         display: flex;
         flex-wrap: wrap; /* Wrap to the next line */
+        justify-content: center; /* Center the video containers horizontally */
         gap: 20px; /* Adjust the gap between videos */
       }
   
