--- a/task3.html
+++ b/task3.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" href="styles_v1.css" />
   <title>Youtube Clone with HTML & CSS</title>
 </head>
+<style>
+    body {
+      margin: 0;
+      background: url('your-background-image.jpg') right center fixed; /* Replace 'your-background-image.jpg' with the actual path to your background image */
+      background-size: auto 100%; /* Adjust the size to prevent overlapping with the sidebar */
+    }
+</style>
 <body>
   <header class="header">
     <div class="logo left">
