--- a/task3.html
+++ b/task3.html
@@ -11,10 +11,14 @@
   <title>Youtube Clone with HTML & CSS</title>
 </head>
 <style>
-    body {
-      margin: 0;
-      background: url('your-background-image.jpg') right center fixed; /* Replace 'your-background-image.jpg' with the actual path to your background image */
-      background-size: auto 100%; /* Adjust the size to prevent overlapping with the sidebar */
+    .video {
+      width: 70%; /* Adjust the width as needed */
+      margin-right: 30px; /* Add some margin to create space between the video and the sidebar */
+    }
+    
+    /* If necessary, you can also adjust the thumbnail size */
+    .thumbnail img {
+      width: 100%; /* This ensures the thumbnail takes up the full width of its container */
     }
 </style>
 <body>
