--- a/beta.html
+++ b/beta.html
@@ -94,7 +94,7 @@
     <div class="container">
         <div class="pokerball"></div>
     </div>
-    <img src="https://arnavprasad.me/img/projects/shiny_hunter/normal.gif" alt="Shiny Hunter" style="z-index: 2; position: absolute; top: calc(50% + 10cm); left: 50%; transform: translate(-50%, -50%);">
+    <img src="https://arnavprasad.me/img/projects/shiny_hunter/normal.gif" alt="Shiny Hunter" style="z-index: 2; position: absolute; top: calc(50% - 6cm); left: 50%; transform: translate(-50%, -50%);">
     <div class="background-wrap">
         <div class="bubble x1"></div>
         <div class="bubble x2"></div>
