--- a/Lab_work/html/beta.html
+++ b/Lab_work/html/beta.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edges">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Lab_work/index_v1.css">
+    <base href="https://benxkirby.github.io/kiyb/">
+    <link rel="stylesheet" type="text/css" href="Lab_work/index_v1.css">
     <title>Pokerball</title>
     <style>
         body {
