--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <p>[Brief Description]</p>
                 </li>
                 <li>
-                    <a class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                    <a class="button-link" href="Lab_work/html/beta.html">Laboratory Task 2</a>
                     <p>[Brief Description]</p>
                 </li>
                 <li>
